--- a/src/components/horizontalbar/horizontal.module.css
+++ b/src/components/horizontalbar/horizontal.module.css
@@ -38,3 +38,24 @@
   height: 30px; width: 30px;
   border-radius: 100%;
 }
+@media only screen and (max-width: 1010px) {
+  
+  .bcircle{
+    display: block;
+  }
+  .horizndiv{
+    width: 81vw;
+  }
+  
+}
+@media only screen and (max-width: 768px) {
+  .horizndiv{
+    width: 90vw;
+  }
+  .bcircle{
+    display: none;
+  }
+  .searchbox{
+    width: 20px;
+  }
+}
