--- a/src/components/infocard/infocard.module.css
+++ b/src/components/infocard/infocard.module.css
@@ -15,3 +15,11 @@
    display: flex; align-items: center; justify-content: center; 
 }
 
+@media only screen and (max-width: 768px) {
+  .infocard{
+    flex-wrap: wrap;
+  }
+  .card{
+    margin-top: 10px; width: 100%;
+  }
+}
