--- a/src/components/orders/order.module.css
+++ b/src/components/orders/order.module.css
@@ -6,13 +6,13 @@
 margin-top: 10px;
 }
 .tabstl{
-width: 100%; border-collapse: collapse;
+width: 100%; border-collapse: collapse; overflow: auto;
 }
 .tabstl thead,.tabstl tbody{
     display: block;
 }
 .tabstl tbody{
-    height: 150px; overflow: auto;
+    height: 150px; overflow: auto; width: 100%;
 }
 .tabstl tbody::-webkit-scrollbar {
   display: none;
@@ -27,5 +27,13 @@ width: 140px; text-align: start; color: white;
 
 tr{
 border-bottom: 1px solid rgba(255, 255, 255, 0.158);
+}
+@media only screen and (max-width: 768px) {
+  tbody td{
+    font-size: 15px; font-weight: 200;
+  }
+  thead th{
+    font-size: 15px; font-weight: 200;
+  }
 }
 
