--- a/src/components/verticalbar/vertical.module.css
+++ b/src/components/verticalbar/vertical.module.css
@@ -1,4 +1,5 @@
 .verticaldiv {
+  min-width: 45px;
   width: 4vw;
   height: 550px;
   background-color: rgb(29, 28, 28);
@@ -10,4 +11,10 @@
 
 .vupper{
   display: flex; flex-direction: column; align-items: center;  gap: 20px; flex: 1;
+}
+
+@media only screen and (max-width: 768px) {
+  .verticaldiv{
+    display: none;
+  }
 }
